			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01at: *********************************

IMP: (12/3/04, GVG) DRC: generating warnings if generic arcs are found in layout cells

BUG: (12/3/04, GVG) TSMC90: Active ports got wrong active arcs attached (Bug #52)
FIX: Switched to N type

BUG: (12/3/04, DN) In ELIB input technology and scale calculation is undeterministic(Bug #20).
FIX: LibraryFiles.computeTech() ensures that subcells have computed technology.

IMP: (12/3/04, DN) Technology.whatTechnology returns Artwork for text files.     

IMP: (12/3/04, DN) Launcher enables assertions.

BUG: (12/2/04, SMR) Layer Visibility dialog doesn't work right on Macintosh.
FIX: Change event handling to work on Mac.

IMP: (12/2/04, SMR) Waveform window "measure" mode now snaps to waveform points.

BUG: (12/2/04, GVG) Multi cuts conditions not proporly checked for TSM90 tech and viaXs
IMP: isMultiCutCase() depends on technologies. By default, if more than 1 cut then is multiCut node.
For TSM90, only when 3 neighbors (Bug #21). Bug #49 as well.

IMP: (12/2/04, SMR) Converting from schematics to layout ("Make Alternate Layout View")
     does not re-create existing cells. (Bug #38).

IMP: (12/2/04, SMR) Going up hierarchy follows exports.

************************* Version 8.01as: *********************************

BUG: (12/2/04, SMR) JELIB input may crash. (Bug #46)
FIX: In "JELIB.instantiateCellContent()" handle null "lineReader".

IMP: (12/1/04, SMR) Status bar coordinates are wider and right-aligned (Bug #33)

IMP: (12/2/04, SMR) PostScript output improved (fills paper better, writes all ports). (Bug #25)

BUG: (12/2/04, SMR) Extracting instances doesn't preserve export characteristics. (Bug #44)
FIX: In CircuitChanges.extractOneNode(), copy all export information.

IMP: (12/2/04, SMR) HSpice output reader can now handle wide signal format (9601). (Bug #39)
